0.1-alpha3/_sources/gene/AGAP007086.rst.txt
:orphan:



AGAP007086
==========

Location: **2L:42,327,400-42,406,342**



Description: **Sodium channel protein**.

External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP007086>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2L:42327400-42406342#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/IHS/BFS/2/7/index`
      - IHS
      - Burkina Faso *An. gambiae*
      - 2L:42,314,895-42,454,895
      - 222
      - 95.5%
      - nan
    * - :doc:`../signal/IHS/GNS/2/5/index`
      - IHS
      - Guinea *An. gambiae*
      - 2L:42,274,895-42,414,895
      - 98
      - 87.9%
      - nan
    * - :doc:`../signal/IHS/CMS/2/6/index`
      - IHS
      - Cameroon *An. gambiae*
      - 2L:42,394,895-42,434,895
      - 90
      - 77.8%
      - nan
    






Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP007086';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


